# blitz-swarm

./: .gitignore  BLITZ-SWARM.md  README.md  agents.py  blackboard.py  blitz.toml  config.py  consensus.py  embedder.py  orchestrator.py  pyproject.toml
docs/: RESEARCH_LOG.md
memory/: models.py  reader.py  schema.sql  writer.py
